# haskell-starter-kit

./: LICENSE  README.md  cookiecutter.json  default.nix  haskell-template-project.cabal  hlint.nix  shell.nix
hooks/: post_gen_project.py
{{cookiecutter.project_name_slug}}/: .dir-locals.el  .ghci  README.md  cabal-fmt.nix  default.nix  hlint.nix  shell.nix  stylish-haskell.nix  weeder.dhall  weeder.nix  {{cookiecutter.project_name_slug}}.cabal
{{cookiecutter.project_name}}/: .dir-locals.el  .stylish-haskell.yaml  LICENSE  README.md  apply-refact.nix  cabal-fmt.nix  default.nix  haskell-pkgs.nix  hlint.nix  shell.nix  stylish-haskell.nix  {{cookiecutter.project_name}}.cabal
{{cookiecutter.project_name}}/test/{{cookiecutter.module}}/: ExampleSpec.hs
