cabal-version: 2.1

name:           haskell-template-project
version:        0.1.0.0
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/EncodePanda/haskell-template-project

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , text
  default-language: Haskell2010

executable app
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-template-project
  default-language: Haskell2010