cabal-version: 2.1

name:           {{cookiecutter.project_name}}
version:        0.1.0.0
license-file:   LICENSE
author:         {{cookiecutter.author_name}}
maintainer:     {{cookiecutter.author_name}}
copyright:      {{cookiecutter.author_name}}
category:       {{cookiecutter.category}}
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/{{cookiecutter.gh_user}}/{{cookiecutter.project_name}}

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , text
  default-language: Haskell2010

executable {{cookiecutter.project_name}}
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.project_name}}
  default-language: Haskell2010