cabal-version: 2.1

name:           {{cookiecutter.project_name}}
version:        0.1.0.0
license-file:   LICENSE
author:         {{cookiecutter.author_name}}
maintainer:     {{cookiecutter.author_name}}
copyright:      {{cookiecutter.author_name}}
category:       {{cookiecutter.category}}
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/{{cookiecutter.gh_user}}/{{cookiecutter.project_name}}

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , text
  default-language: Haskell2010

executable {{cookiecutter.project_name}}-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.project_name}}
  default-language: Haskell2010

test-suite {{cookiecutter.project_name}}-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    {{cookiecutter.module}}.ExampleSpec
  -- dependencies in library
  build-depends:
    , base
    , hspec
    , hedgehog
    , hspec-hedgehog
    , {{cookiecutter.project_name}}
  build-tool-depends: hspec-discover:hspec-discover == 2.*